; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_FreeHamcore.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_FreeHamcore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_4__*, %struct.TYPE_4__* }

@hamcore = common dso_local global i32* null, align 8
@hamcore_io = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FreeHamcore() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.TYPE_4__*, align 8
  store i64 0, i64* %1, align 8
  br label %3

3:                                                ; preds = %28, %0
  %4 = load i64, i64* %1, align 8
  %5 = load i32*, i32** @hamcore, align 8
  %6 = call i64 @LIST_NUM(i32* %5)
  %7 = icmp slt i64 %4, %6
  br i1 %7, label %8, label %31

8:                                                ; preds = %3
  %9 = load i32*, i32** @hamcore, align 8
  %10 = load i64, i64* %1, align 8
  %11 = call %struct.TYPE_4__* @LIST_DATA(i32* %9, i64 %10)
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %2, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = call i32 @Free(%struct.TYPE_4__* %14)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = icmp ne %struct.TYPE_4__* %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = call i32 @Free(%struct.TYPE_4__* %23)
  br label %25

25:                                               ; preds = %20, %8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %27 = call i32 @Free(%struct.TYPE_4__* %26)
  br label %28

28:                                               ; preds = %25
  %29 = load i64, i64* %1, align 8
  %30 = add nsw i64 %29, 1
  store i64 %30, i64* %1, align 8
  br label %3

31:                                               ; preds = %3
  %32 = load i32*, i32** @hamcore, align 8
  %33 = call i32 @ReleaseList(i32* %32)
  %34 = load i32*, i32** @hamcore_io, align 8
  %35 = call i32 @FileClose(i32* %34)
  store i32* null, i32** @hamcore_io, align 8
  store i32* null, i32** @hamcore, align 8
  ret void
}

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local %struct.TYPE_4__* @LIST_DATA(i32*, i64) #1

declare dso_local i32 @Free(%struct.TYPE_4__*) #1

declare dso_local i32 @ReleaseList(i32*) #1

declare dso_local i32 @FileClose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
